--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,52 @@ tags
 *.o
 *.csv
 .ycm_extra_conf.py
+
+
+# Created by https://www.gitignore.io/api/c++,cmake
+# Edit at https://www.gitignore.io/?templates=c++,cmake
+
+### C++ ###
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+### CMake ###
+build
+
+### CMake Patch ###
+# External projects
+*-prefix/
+
+# End of https://www.gitignore.io/api/c++,cmake
+
+
