Add check for gmp overflow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,10 @@ find_package(GMP REQUIRED)
 add_executable(batchgcd src/batchgcd.cpp
                         src/utils.cpp)
 
+add_executable(gmp_overflow src/test/gmp_import_overflow.cpp)
+
 target_link_libraries(batchgcd gmp gmpxx ${Boost_LIBRARIES})
+target_link_libraries(gmp_overflow gmp gmpxx ${Boost_LIBRARIES})
 
 # enable_testing()
 # add_test(test batchgcd)
